<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_item"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sports_item"
        android:icon="@drawable/sports"
        android:title="@string/sport"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tech_item"
        android:icon="@drawable/tech"
        android:title="@string/tech"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/business_item"
        android:icon="@drawable/business"
        android:title="@string/busi"
        app:showAsAction="ifRoom" />
</menu>